--- a/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
+++ b/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
@@ -199,6 +199,10 @@
 
   .fullscreen & {
     flex-direction: row;
+
+    @media (max-width: 968px) {
+      flex-direction: column;
+    }
   }
 }
 
@@ -278,12 +282,17 @@
     transition: all 0.3s cubic-bezier(0.4, 0.0, 0.2, 1);
 
     &.hidden {
-      width: 0;
-      min-width: 0;
-      max-width: 0;
-      padding: 0;
-      border: none;
-      overflow: hidden;
+      display: none;
+    }
+
+    @media (max-width: 968px) {
+      width: 100%;
+      max-width: 100%;
+      min-width: 100%;
+      height: 300px;
+      padding-top: 0;
+      border-left: none;
+      border-top: 1px solid var(--mat-sys-outline-variant);
     }
   }
 
