--- a/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
+++ b/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
@@ -220,6 +220,13 @@
     right: 0;
     z-index: 10;
   }
+
+  // On mobile, hide stream info bar when chat is visible
+  @media (max-width: 968px) {
+    .fullscreen &:has(~ .chat-sidebar:not(.hidden)) app-stream-info-bar {
+      display: none;
+    }
+  }
 }
 
 .video-container {
@@ -301,22 +308,6 @@
     flex: 1;
     min-height: 0;
     overflow: hidden;
-  }
-
-  .fullscreen & {
-    @media (max-width: 768px) {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 20;
-      width: 360px !important;
-      min-width: 360px !important;
-
-      &.hidden {
-        transform: translateX(100%);
-      }
-    }
   }
 }
 
