--- a/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
+++ b/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
@@ -79,7 +79,10 @@
     grid-area: video;
     width: 100%;
     height: 100%;
+    max-height: 100vh;
+    object-position: top center;
     pointer-events: auto;
+    align-self: start;
   }
 }
 
