--- a/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
+++ b/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
@@ -70,7 +70,7 @@
     grid-area: video;
     width: 100%;
     height: 100%;
-    max-height: 100vh;
+    max-height: 80vh;
     object-position: top center;
     pointer-events: auto;
     align-self: start;
@@ -78,7 +78,7 @@
 
     @media (max-width: 968px) {
       height: auto;
-      max-height: calc(100vh - 64px); // Subtract header height
+      // max-height: 50vh;
       flex-shrink: 0;
     }
   }
@@ -348,4 +348,5 @@ app-stream-info-bar {
   gap: 4px;
   flex-shrink: 0;
   margin-left: auto;
+  margin-right: 1rem;
 }
