feat(sidenav): move create button to top of sidenav and adjust styles

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -279,6 +279,16 @@
       [ngClass]="{ 'sidenav-labels': displayLabels(), 'sidenav-small': !displayLabels() }" [opened]="opened()"
       [mode]="layout.isHandset() ? 'over' : 'side'" [fixedInViewport]="false" (closed)="onSidenavClosed()"
       (opened)="onSidenavOpened()">
+      <!-- Create FAB at top of sidenav -->
+      @if (app.authenticated()) {
+      <div class="sidenav-fab-container">
+        <button mat-mini-fab color="primary" class="sidenav-create-fab" (click)="openCreateOptions()"
+          aria-label="Create new content" [matTooltip]="displayLabels() ? '' : 'Create'">
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
+      }
+
       <mat-nav-list>
         @for (item of navigationItems(); track $index) {
         <!-- Main navigation item -->
@@ -328,16 +338,6 @@
           }
         </a>
       </mat-nav-list>
-
-      <!-- Create FAB at bottom of sidenav -->
-      @if (app.authenticated()) {
-      <div class="sidenav-fab-container">
-        <button mat-mini-fab color="primary" class="sidenav-create-fab" (click)="openCreateOptions()"
-          aria-label="Create new content" [matTooltip]="displayLabels() ? '' : 'Create'">
-          <mat-icon>add</mat-icon>
-        </button>
-      </div>
-      }
     </mat-sidenav>
 
     <mat-sidenav #profileSidenav position="end" class="profile-sidenav" mode="over" [fixedInViewport]="true"
