--- a/src/app/app.html
+++ b/src/app/app.html
@@ -83,8 +83,7 @@
     @if (app.authenticated() && !layout.search()) {
     <button class="notification-toolbar" mat-icon-button [matMenuTriggerFor]="menuNotifications"
       #notificationMenuTrigger="matMenuTrigger">
-      <mat-icon [class.pulsing-icon]="hasActivePendingNotifications()"
-        [matBadge]="unreadNotificationsCount() > 0 ? unreadNotificationsCount() : null">notifications</mat-icon>
+      <mat-icon [matBadge]="unreadNotificationsCount() > 0 ? unreadNotificationsCount() : null">notifications</mat-icon>
     </button>
     }
 
