--- a/src/app/pages/drafts/drafts.component.html
+++ b/src/app/pages/drafts/drafts.component.html
@@ -95,7 +95,7 @@
           }
 
           <div class="draft-actions">
-            <button mat-button (click)="openDraft(draft)">
+            <button mat-button (click)="openDraft(draft, $event)">
               <mat-icon>edit</mat-icon>
               Continue Writing
             </button>
