--- a/src/app/components/article-display/article-display.component.html
+++ b/src/app/components/article-display/article-display.component.html
@@ -102,7 +102,7 @@
   <footer class="article-footer">
     <div class="article-actions">
       @if (accountState.isCurrentUser(authorPubkey())) {
-      <button mat-button color="primary" routerLink="/article/edit/{{ link() }}" title="Edit Article">
+      <button mat-button color="primary" (click)="layout.createArticle(link())" title="Edit Article">
         <mat-icon>edit</mat-icon>
         Edit
       </button>
